test/core/errors/indexed_offsets_error/zs/bitwise_or_operator_in_array_expression_error.zs
package bitwise_or_operator_in_array_expression_error;

struct BitwiseOrOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index | 0xff]:
    string fields[];
};
